--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -985,30 +985,32 @@ time-separator:first-child {
 .source-list .source-list-item:active {
   background-color: #f0f0f0;
 }
-.source-list .source-list-item .btn-delete {
+.source-list .source-list-item .icon {
+  font-size: 24px;
+  padding: 0 8px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.source-list .source-list-item .icon.button {
   top: 12px;
   right: 0;
   width: 48px;
   height: 48px;
+  padding: 0;
+  font-size: 14px;
   line-height: 48px;
   text-align: center;
   position: absolute;
   vertical-align: middle;
 }
-.source-list .source-list-item .btn-delete:hover {
+.source-list .source-list-item .icon.button:hover {
   background-color: #f3f3f3;
 }
-.source-list .source-list-item .btn-delete:active {
+.source-list .source-list-item .icon.button:active {
   background-color: #eee;
-}
-.source-list .source-list-item .icon {
-  font-size: 24px;
-  padding: 0 8px;
-  width: 24px;
-  line-height: 24px;
-  height: 24px;
-  display: inline-block;
-  vertical-align: middle;
 }
 
 #view-settings-content.view-content {
