--- a/src/scss/views/_settings.scss
+++ b/src/scss/views/_settings.scss
@@ -17,30 +17,33 @@
 		&:active {
 			background-color: #f0f0f0;
 		}
-		.btn-delete {
-			top: 12px;
-			right: 0;
-			width: 48px;
-			height: 48px;
-			line-height: 48px;
-			text-align: center;
-			position: absolute;
-			vertical-align: middle;
-		}
-		.btn-delete:hover {
-			background-color: #f3f3f3;
-		}
-		.btn-delete:active {
-			background-color: #eee;
-		}
 		.icon {
 			font-size: 24px;
 			padding: 0 8px;
 			width: 24px;
-			line-height: 24px;
 			height: 24px;
+			line-height: 24px;
 			display: inline-block;
 			vertical-align: middle;
+		}
+		.icon.button {
+			top: 12px;
+			right: 0;
+			width: 48px;
+			height: 48px;
+			padding: 0;
+			font-size: 14px;
+			line-height: 48px;
+			text-align: center;
+			position: absolute;
+			vertical-align: middle;
+
+			&:hover {
+				background-color: #f3f3f3;
+			}
+			&:active {
+				background-color: #eee;
+			}
 		}
 	}
 }
