更新文件浏览器在选择模式下的样式

--- a/src/scss/views/_browser.scss
+++ b/src/scss/views/_browser.scss
@@ -123,7 +123,9 @@
 	.on-normal-mode {
 		display: none;
 	}
-	.checkbox {
-		display: block;
+	 .file-list-item-picture {
+		.checkbox {
+			display: block;
+		}
 	}
 }
