--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -219,47 +219,35 @@ textview-i18n.btn-link:hover,
   background-color: #fff;
   box-sizing: border-box;
 }
-
-textedit.dialog-input {
-  box-sizing: border-box;
-}
-
 .dialog-content .text-block {
   margin-bottom: 15px;
 }
-
 .dialog-content .dialog-header {
   width: 100%;
   padding: 15px 15px 5px 15px;
   box-sizing: border-box;
 }
-
 .dialog-content .dialog-body {
   padding: 15px;
   width: 100%;
   box-sizing: border-box;
 }
-
 .dialog-content .dialog-footer {
   width: 100%;
   padding: 5px 15px 15px 15px;
   box-sizing: border-box;
 }
-
 .dialog-content .input-group {
   padding: 5px 15px;
   box-sizing: border-box;
   margin: -5px -15px 10px -15px;
 }
-
 .dialog-content .input-group:last-child {
   margin-bottom: 0;
 }
-
 .dialog-content .input-group .message {
   padding-top: 5px;
 }
-
 .dialog-content .input-group .error.message {
   color: #fff;
   padding: 4px 10px;
@@ -268,7 +256,6 @@ textedit.dialog-input {
   box-sizing: border-box;
   display: none;
 }
-
 .dialog-content .input-group.error textedit,
 .dialog-content .input-group.error textedit:active,
 .dialog-content .input-group.error textedit:focus,
@@ -276,22 +263,18 @@ textedit.dialog-input {
   border-color: #FD4C4C;
   box-shadow: none;
 }
-
 .dialog-content .input-group.error .error.message {
   display: block;
 }
-
 .dialog-content .dialog-header .text,
 .dialog-content .dialog-header textview {
   font-size: 18px;
 }
-
 .dialog-content .dialog-body .text,
 .dialog-content .dialog-body textview {
   font-size: 14px;
   width: 100%;
 }
-
 .dialog-content .dialog-btn {
   width: 100%;
   height: 30px;
@@ -300,7 +283,6 @@ textedit.dialog-input {
   box-sizing: border-box;
   border: 2px solid #ddd;
 }
-
 .dialog-content .dialog-btn-group {
   width: 50%;
   height: 30px;
@@ -308,58 +290,34 @@ textedit.dialog-input {
   padding: 0 4px;
   box-sizing: border-box;
 }
-
-.dialog-content .dialog-btn-group.one-button {
-  width: 100%;
-  display: block;
-}
-
-.dialog-content .dialog-btn-group.one-button .dialog-btn {
-  width: 50%;
-  margin: 0 auto;
-}
-
 .dialog-content .dialog-btn-group:first-child {
   padding-left: 0;
 }
-
 .dialog-content .dialog-btn-group:last-child {
   padding-right: 0;
 }
-
 .dialog-content .dialog-btn:hover {
   border: 2px solid #aaa;
 }
-
 .dialog-content .dialog-btn:active {
   background-color: #aaa;
 }
-
 .dialog-content .dialog-btn:disabled {
   background-color: #eaeaea;
   border: 2px solid #eaeaea;
 }
-
-.dialog-content .dialog-btn:disabled .text,
-.dialog-content .dialog-btn:disabled textview {
+.dialog-content .dialog-btn:disabled .text, .dialog-content .dialog-btn:disabled textview {
   color: #bbb;
 }
-
-.dialog-content .dialog-btn .text,
-.dialog-content .dialog-btn textview {
+.dialog-content .dialog-btn .text, .dialog-content .dialog-btn textview {
   width: 100%;
   text-align: center;
   line-height: 30px;
 }
-
-.dialog-content textedit.has-error,
-.dialog-content textedit.has-error:focus,
-.dialog-content textedit.has-error:hover,
-.dialog-content textedit.has-error:active {
+.dialog-content textedit.has-error:focus, .dialog-content textedit.has-error:hover, .dialog-content textedit.has-error:active {
   border-color: #a94442;
   box-shadow: 0 0 6px rgba(169, 68, 66, 0.4);
 }
-
 .dialog-content progress {
   width: 100%;
   height: 14px;
@@ -367,11 +325,14 @@ textedit.dialog-input {
   background-color: #eee;
   margin-bottom: 5px;
 }
-
 .dialog-content progressbar {
   width: 100%;
   height: 100%;
   background-color: #888;
+}
+
+textedit.dialog-input {
+  box-sizing: border-box;
 }
 
 .message.box {
@@ -764,7 +725,7 @@ dropdown.checkable dropdown-item.active .icon {
 .selection-mode .on-normal-mode {
   display: none;
 }
-.selection-mode .checkbox {
+.selection-mode .file-list-item-picture .checkbox {
   display: block;
 }
 
