--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "components/text";
 @import "components/button";
 @import "components/alert";
+@import "components/progress";
 @import "components/dialog";
 @import "components/message";
 @import "components/dropdown";
