--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,4 +1,4 @@
-.pull-right {
+.pull-right, .right.floated {
   top: 0;
   right: 0;
   height: 100%;
@@ -198,6 +198,19 @@ textview-i18n.btn-link:hover,
   color: #888;
   font-size: 13px;
   display: block;
+}
+
+progress {
+  width: 100%;
+  height: 14px;
+  display: block;
+  background-color: #fafafa;
+}
+
+progressbar {
+  width: 100%;
+  height: 100%;
+  background-color: #888;
 }
 
 .dialog {
