--- a/src/scss/components/_dialog.scss
+++ b/src/scss/components/_dialog.scss
@@ -73,18 +73,10 @@
 		}
 	}
 	.dialog-body {
-		.text, textview {
+		.text, textview, button {
 			font-size: 14px;
 			width: 100%;
 		}
-	}
-	.dialog-btn {
-		width: 100%;
-		height: 30px;
-		padding: 0;
-		background-color: #ddd;
-		box-sizing: border-box;
-		border: 2px solid #ddd;
 	}
 	.dialog-btn-group {
 		width: 50%;
@@ -111,6 +103,15 @@
 		}
 	}
 	.dialog-btn {
+		width: 100%;
+		height: 30px;
+		padding: 0;
+		line-height: 28px;
+		text-align: center;
+		box-sizing: border-box;
+		background-color: #ddd;
+		border: 2px solid #ddd;
+
 		&:hover {
 			border: 2px solid #aaa;
 		}
@@ -121,14 +122,8 @@
 			background-color: #eaeaea;
 			border: 2px solid #eaeaea;
 		}
-		&:disabled .text,
-		&:disabled textview {
+		&:disabled {
 			color: #bbb;
-		}
-		.text, textview {
-			width: 100%;
-			text-align: center;
-			line-height: 30px;
 		}	
 	}
 	textedit.has-error {
