--- a/src/scss/components/_view.scss
+++ b/src/scss/components/_view.scss
@@ -84,12 +84,10 @@
 			width: 100%;
 			height: 4px;
 			position: absolute;
-			background-color: #ccc;
 
 			progressbar {
-				width: 100%;
+				width: 0;
 				height: 100%;
-				background-color: #888;
 			}
 		}
 	}
