--- a/src/scss/views/_browser.scss
+++ b/src/scss/views/_browser.scss
@@ -20,10 +20,10 @@
 			height: 54px;
 			position: absolute;
 			background-color: rgba(255,255,255,0.8);
-			border-top: 1px solid #eee;
+			border-top: 1px solid rgba(255,255,255,0.95);
 			padding: 10px 50px 10px 10px;
 			box-sizing: border-box;
-	
+
 			.icon {
 				top: 10px;
 				right: 10px;
@@ -56,7 +56,7 @@
 
 		.picture-cover {
 			top: 0;
-			left: 0; 
+			left: 0;
 			width: 100%;
 			height: 100%;
 			display: block;
