Move switch css code to _switch.scss file

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "common/layout";
 @import "components/text";
 @import "components/button";
+@import "components/switch";
 @import "components/alert";
 @import "components/progress";
 @import "components/dialog";
