--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -173,6 +173,52 @@ textview-i18n.btn-link:hover,
   margin-left: 10px;
 }
 
+.switch {
+  height: 20px;
+  width: 44px;
+  display: inline-block;
+  border: 2px solid #c8d3d9;
+  background-color: #c8d3d9;
+}
+.switch .switch-bar {
+  left: -24px;
+  height: 100%;
+  width: 68px;
+  position: relative;
+}
+.switch .switch-slider {
+  width: 20px;
+  height: 100%;
+  background-color: #8c9da5;
+}
+.switch.checked {
+  border: 2px solid #80dea0;
+  background-color: #80dea0;
+}
+.switch.checked .switch-slider {
+  background-color: #44BB55;
+}
+.switch.checked .switch-bar {
+  left: 0;
+}
+.switch .switch-on-block,
+.switch .switch-off-block {
+  width: 24px;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+}
+.switch .switch-on-block,
+.switch .switch-off-block,
+.switch .switch-slider {
+  display: inline-block;
+}
+
+.switch-text {
+  margin-left: 10px;
+  line-height: 24px;
+}
+
 .alert {
   top: 60px;
   right: 20px;
