--- a/src/scss/components/_view.scss
+++ b/src/scss/components/_view.scss
@@ -1,5 +1,3 @@
-@import "variables";
-
 .view {
 	top: 0;
 	left: 0;
@@ -8,6 +6,7 @@
 	position: absolute;
 	padding: 0 0 0 $sidebar-min-width;
 	box-sizing: border-box;
+	background-color: $view-bg;
 
 	.view-navbar {
 		top: 0;
@@ -19,42 +18,42 @@
 		background-color: #fafafa;
 		box-sizing: border-box;
 		box-shadow: 0px 0px 4px rgba(0,0,0,0.6);
+	}
 
-		.divider {
-			width: 1px;
-			display: inline-block;
-			background-color: #aaa;
-			height: 100%;
-			margin: 0 12px;
-		}
-		.view-navbar-title, .view-navbar-text {
-			font-size: 16px;
-			line-height: 48px;
-			display: inline-block;
-		}
-		.view-navbar-title {
-			padding: 0 0 0 25px;
-		}
-		.view-navbar-btn {
-			display: inline-block;
-			padding: 14px 12px 12px 10px;
-		}
-		.view-navbar-btn .text {
-			display: inline-block;
-		}
-		.view-navbar-btn .text {
-			font-size: 16px;
-			height: 24px;
-		}
-		.view-navbar-btn .icon {
-			width: 24px;
-			font-size: 24px;
-			line-height: 24px;
-			text-align: center;
-		}
-		.view-navbar-title {
-			display: inline-block;
-		}
+	.divider {
+		width: 1px;
+		display: inline-block;
+		background-color: #aaa;
+		height: 100%;
+		margin: 0 12px;
+	}
+	.view-navbar-title, .view-navbar-text {
+		font-size: 16px;
+		line-height: 48px;
+		display: inline-block;
+	}
+	.view-navbar-title {
+		padding: 0 0 0 25px;
+	}
+	.view-navbar-btn {
+		display: inline-block;
+		padding: 14px 12px 12px 10px;
+	}
+	.view-navbar-btn .text {
+		display: inline-block;
+	}
+	.view-navbar-btn .text {
+		font-size: 16px;
+		height: 24px;
+	}
+	.view-navbar-btn .icon {
+		width: 24px;
+		font-size: 24px;
+		line-height: 24px;
+		text-align: center;
+	}
+	.view-navbar-title {
+		display: inline-block;
 	}
 	.view-body {
 		height: 100%;
